Correction de l'alignement des ul dans le pied-de-page

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -71,6 +71,7 @@ html {
 
 		ul {
 			list-style-type: none;
+			padding-left: 0;
 		}
 	}
 }
